# prometheus-pve-exporter

./: .dockerignore  .env.local  .gitignore  .travis.yml  APKBUILD  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  build_release.sh  compose.yml  diff.txt  docker-compose.yml  entrypoint.sh  pve.py  pve.spec  pve.yml  pylintrc  pylintrc.toml  pyproject.toml  requirements-test.txt  requirements.in  requirements.txt  setup.py  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  container-image.yml  container-test.yml  docker-image.yml  pyinstaller.yml  pypi.yml
alpine/py3-openssh-wrapper/: APKBUILD
alpine/py3-proxmoxer/: APKBUILD
debian/: changelog  control  copyright  default  dirs  install  postinst  postrm  rules  service  watch
debian/patches/: 0001-Rename-bin.patch  0002-wrapt-compatible.patch  series
debian/upstream/: metadata
examples/systemd/: prometheus-pve-exporter.service
pve_exporter/: collector.py  http.py
scripts/: pve_exporter
src/pve_exporter/: __main__.py  cli.py  collector.py  config.py  http.py  scrape_metrics.py  utils.py
src/pve_exporter/collector/: __init__.py  cluster.py  node.py  qga.py  storage.py
