[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-pve-exporter"
version = "3.4.3"
authors = [{ name = "Lorenz Schori", email = "lo@znerol.ch" }]
description = "Proxmox VE exporter for the Prometheus monitoring system."
requires-python = ">=3.9"
keywords = ["prometheus", "exporter", "network", "monitoring", "proxmox"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["dependencies", "optional-dependencies", "readme"]

[project.urls]
Homepage = "https://github.com/prometheus-pve/prometheus-pve-exporter"

[project.scripts]
pve_exporter = "pve_exporter.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.test = { file = ["requirements-test.txt"] }
readme = { file = ["README.rst"] }
